--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -14,25 +14,56 @@
 <body>
     <div th:replace="fragments/header :: header"></div>
     <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-6 col-md-offset-4">
-                <div class="well well-sm">
-                    <div class="row">
-                        <div class="col-sm-6 col-md-4">
-                            <img src="http://placehold.it/380x500" alt="" class="img-rounded img-responsive" />
-                        </div>
-                        <div class="col-sm-6 col-md-8">
-                            <h4 th:text="${user.firstname + ' '+ user.secondname}"> Bhaumik Patel</h4>
-                            <p>
-                                <i class="glyphicon glyphicon-user"> </i><span th:text="${user.username}">username</span>
-                                <br></br>
-                                 <i class="glyphicon glyphicon-envelope"> </i><span th:text="${user.email}">email@emil.com</span>
-                                <br></br>
-                                <div class="col-md-12"></div>
-                                <a href="#" class="btn btn-primary">Default button</a>
-                            </p>
+        <div class="col-md-3">
+            <ul class="nav nav-pills nav-stacked">
+                <li class="active"><a href="/profile">Profile</a></li>
+                <li><a href="/permissions">My permissions</a></li>
+                <li><a href="/setup">Set up permissions</a></li>
+                <li><a href="/device">Register device</a></li>
+
+            </ul>
+        </div>
+        <div class="col-md-9">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad">
+                <div class="panel panel-info">
+                    <div class="panel-heading">
+                        <h2 class="panel-title" th:text="${user.firstname + ' '+ user.secondname}">Sheena Shrestha</h2>
+                    </div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class=" col-md-12 col-lg-12 ">
+                                <table class="table table-user-information">
+                                    <tbody>
+                                        <tr>
+                                            <td>First name:</td>
+                                            <td th:text="${user.firstname}"></td>
+                                        </tr>
+                                        <tr>
+                                            <td>Second name:</td>
+                                            <td th:text="${user.secondname}"></td>
+                                        </tr>
+                                        <tr>
+                                            <td>Username:</td>
+                                            <td th:text="${user.username}"></td>
+                                        </tr>
+                                        <tr>
+                                            <td>Email:</td>
+                                            <td th:text="${user.email}"></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                                <div class="col-md-5"><button class="btn btn-primary">Edit profile</button></div>
+                                <div class="col-md-5 col-md-offset-1"><a class="btn btn-success" href="/device">Register device</a></div>
+                            </div>
                         </div>
                     </div>
+                    <div class="panel-footer">
+                        <a data-original-title="Broadcast Message" data-toggle="tooltip" type="button" class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-envelope"></i></a>
+                        <span class="pull-right">
+                            <a href="edit.html" data-original-title="Edit this user" data-toggle="tooltip" type="button" class="btn btn-sm btn-warning"><i class="glyphicon glyphicon-edit"></i></a>
+                        </span>
+                    </div>
+
                 </div>
             </div>
         </div>
